--- a/deepincn/git/deepin-wallpapers-git/PKGBUILD
+++ b/deepincn/git/deepin-wallpapers-git/PKGBUILD
@@ -15,7 +15,7 @@ license=('GPL')
 url="https://github.com/linuxdeepin/deepin-wallpapers"
 makedepends=('git' 'deepin-api-git')
 groups=('deepin-git')
-source=("$pkgname::https://github.com/linuxdeepin/deepin-wallpapers/")
+source=("$pkgname::git+https://github.com/linuxdeepin/deepin-wallpapers/")
 sha512sums=('SKIP')
 
 pkgver() {
