--- a/deepincn/git/deepin-qt5integration-git/PKGBUILD
+++ b/deepincn/git/deepin-qt5integration-git/PKGBUILD
@@ -12,7 +12,7 @@ makedepends=('git' 'qt5-tools' 'xcb-util-renderutil' 'gtest')
 conflicts=('deepin-qt5integration')
 provides=('deepin-qt5integration')
 groups=('deepin-git')
-source=("$pkgname::https://github.com/linuxdeepin/qt5integration")
+source=("$pkgname::git+https://github.com/linuxdeepin/qt5integration")
 sha512sums=('SKIP')
 
 pkgver() {
