--- a/deepincn/git/golang-github-linuxdeepin-go-dbus-factory-git/PKGBUILD
+++ b/deepincn/git/golang-github-linuxdeepin-go-dbus-factory-git/PKGBUILD
@@ -12,7 +12,7 @@ makedepends=('git' 'go')
 provides=('golang-github-linuxdeepin-go-dbus-factory')
 conflicts=('golang-github-linuxdeepin-go-dbus-factory')
 groups=('deepin-git')
-source=("$pkgname::https://github.com/linuxdeepin/go-dbus-factory")
+source=("$pkgname::git+https://github.com/linuxdeepin/go-dbus-factory")
 sha512sums=('SKIP')
 
 pkgver() {
