--- a/deepincn/git/deepin-anything-git/PKGBUILD
+++ b/deepincn/git/deepin-anything-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=deepin-anything-git
 pkgname=(deepin-anything-git deepin-anything-dkms-git)
-pkgver=5.0.10.r11.gb5a2fa4
+pkgver=5.0.13.r14.g0218923
 _extramodules=extramodules-ARCH
 pkgrel=1
 pkgdesc="Deepin Anything file search tool"
@@ -10,7 +10,7 @@ arch=('x86_64' 'aarch64')
 url="https://github.com/linuxdeepin/deepin-anything"
 license=('GPL3')
 makedepends=('git' 'dtkcore-git' 'udisks2-qt5')
-source=("$pkgbase::https://github.com/linuxdeepin/deepin-anything"
+source=("$pkgbase::git+https://github.com/linuxdeepin/deepin-anything"
         deepin-anything-server.sysusers)
 sha512sums=('SKIP'
             '0ff6a6de1fbfb0c33eaac511b989da321a9e43ece92708af88aee34ad1a05e55572713b1290bc2705d70b91dc7bec4fb4abd3dc664a0abe01de27d88bd9e9c85')
