--- a/deepincn/git/startdde-git/PKGBUILD
+++ b/deepincn/git/startdde-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
 
 pkgname=startdde-git
-pkgver=5.8.22.r112.ga7a2b88
+pkgver=5.8.22.r118.gb7faac1
 pkgrel=1
 pkgdesc="starter of deepin desktop environment"
 arch=('x86_64' 'aarch64')
@@ -40,7 +40,7 @@ prepare() {
   go get -v github.com/godbus/dbus/introspect
   go get -v github.com/godbus/dbus/prop
   go get -v gopkg.in/yaml.v3
-  sed -i 's/sbin/bin/' $pkgname/Makefile
+  sed -i 's/sbin/bin/' Makefile
 }
 
 build() {
