--- a/deepincn/git/deepin-movie-git/PKGBUILD
+++ b/deepincn/git/deepin-movie-git/PKGBUILD
@@ -15,8 +15,7 @@ conflicts=('deepin-movie')
 groups=('deepin-extra-git')
 options=('!lto')
 source=("$pkgname::git+https://github.com/linuxdeepin/deepin-movie-reborn.git"
-        fix-build.patch
-       )
+        fix-build.patch)
 sha512sums=('SKIP'
             'SKIP')
 
