--- a/deepincn/git/dtkgui-git/PKGBUILD
+++ b/deepincn/git/dtkgui-git/PKGBUILD
@@ -1,14 +1,14 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
 
 pkgname=dtkgui-git
-pkgver=5.5.17.1.r12.ga53f411
+pkgver=5.5.22.r8.g6ef1509
 pkgrel=1
 pkgdesc='Deepin Toolkit, gui module for DDE look and feel'
 arch=('x86_64' 'aarch64')
 url="https://github.com/linuxdeepin/dtkgui"
 license=('LGPL3')
 depends=('dtkcore-git' 'librsvg' 'qt5-x11extras')
-makedepends=('git' 'qt5-tools' 'dtkcore-git' 'librsvg' 'qt5-x11extras' 'gtest' 'gmock')
+makedepends=('git' 'qt5-tools' 'dtkcore-git' 'dtkcommon-git' 'librsvg' 'qt5-x11extras' 'gtest' 'gmock')
 conflicts=('dtkgui')
 provides=('dtkgui')
 groups=('deepin-git')
