--- a/deepincn/git/deepin-sound-theme-git/PKGBUILD
+++ b/deepincn/git/deepin-sound-theme-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
 
 pkgname=deepin-sound-theme-git
-pkgver=15.10.6.r2.ge3aa7fb
+pkgver=15.10.6.r3.g0c81150
 pkgrel=1
 pkgdesc="Deepin sound theme"
 arch=('any')
