--- a/deepincn/git/dtkwidget-git/PKGBUILD
+++ b/deepincn/git/dtkwidget-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
 
 pkgname=dtkwidget-git
-pkgver=5.5.17.1.r65.gb7952ebf
+pkgver=5.5.45.r1.gbc050fca
 pkgrel=1
 pkgdesc='Deepin graphical user interface library'
 arch=('x86_64' 'aarch64')
