--- a/deepincn/git/dtkgui/PKGBUILD
+++ b/deepincn/git/dtkgui/PKGBUILD
@@ -8,7 +8,7 @@ arch=('x86_64' 'aarch64')
 url="https://github.com/linuxdeepin/dtkgui"
 license=('LGPL3')
 depends=('dtkcore-git' 'librsvg' 'qt5-x11extras')
-makedepends=('git' 'qt5-tools' 'dtkcore-git' 'dtkcommon-git' 'librsvg' 'qt5-x11extras' 'gtest' 'gmock')
+makedepends=('git' 'qt5-tools' 'dtkcommon-git' 'dtkcore-git' 'librsvg' 'qt5-x11extras' 'gtest' 'gmock')
 conflicts=('dtkgui')
 provides=('dtkgui')
 groups=('deepin-git')
