--- a/deepincn/git/dde-account-faces/PKGBUILD
+++ b/deepincn/git/dde-account-faces/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
-
 pkgname=deepin-account-faces-git
 pkgver=1.0.12.r2.gde4f407
 pkgrel=1
@@ -11,22 +10,18 @@ makedepends=('git')
 conflicts=('dde-account-faces')
 replaces=('dde-account-faces')
 group=('deepin-git')
-source=("$pkgname::git+https://github.com/linuxdeepin/dde-account-faces/")
+source=("$pkgname-$pkgver::source.tar.gz")
 sha512sums=('SKIP')
-
 pkgver() {
-    cd $pkgname
+    cd $pkgname-$pkgver
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-    cd $pkgname
-    if [[ ! -z ${sha} ]];then
-      git checkout -b $sha
-    fi
+    cd $pkgname-$pkgver
 }
 
 package() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   make DESTDIR="$pkgdir" install
 }
