--- a/deepincn/git/deepin-anything/PKGBUILD
+++ b/deepincn/git/deepin-anything/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: DingYuan Zhang <justforlxz@gmail.com>
-
 pkgbase=deepin-anything-git
 pkgname=(deepin-anything-git deepin-anything-dkms-git)
 pkgver=5.0.13.r14.g0218923
@@ -11,11 +10,10 @@ url="https://github.com/linuxdeepin/deepin-anything"
 license=('GPL3')
 groups=('deepin-git')
 makedepends=('git' 'dtkcore-git' 'udisks2-qt5')
-source=("$pkgbase::git+https://github.com/linuxdeepin/deepin-anything"
+source=("$pkgname-$pkgver::source.tar.gz"
         deepin-anything-server.sysusers)
 sha512sums=('SKIP'
             '0ff6a6de1fbfb0c33eaac511b989da321a9e43ece92708af88aee34ad1a05e55572713b1290bc2705d70b91dc7bec4fb4abd3dc664a0abe01de27d88bd9e9c85')
-
 pkgver() {
     cd $pkgbase
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
@@ -23,9 +21,6 @@ pkgver() {
 
 prepare() {
   cd $pkgbase
-  if [[ ! -z ${sha} ]];then
-    git checkout -b $sha
-  fi
   sed -i 's|^systemd_service.path.*|systemd_service.path = /usr/lib/systemd/system|' server/monitor/src/src.pro server/tool/tool.pro
 }
 
@@ -38,7 +33,6 @@ package_deepin-anything-dkms-git() {
   depends=('dkms')
   provides=('DEEPIN-ANYTHING-MODULE' 'deepin-anything-git')
   conflicts=('DEEPIN-ANYTHING-MODULE' 'deepin-anything-git')
-
   cd $pkgbase
   install -dm 755 "$pkgdir"/usr/src
   cp -r kernelmod "$pkgdir"/usr/src/$pkgbase
@@ -47,12 +41,9 @@ package_deepin-anything-dkms-git() {
 
 package_deepin-anything-git() {
   depends=('DEEPIN-ANYTHING-MODULE' 'dtkcore-git' 'udisks2-qt5')
-
   cd $pkgbase
   make VERSION=$pkgver DESTDIR="$pkgdir" install
   rm -r "$pkgdir"/usr/src
-
   mv "$pkgdir"/etc/dbus-1/system.d "$pkgdir"/usr/share/dbus-1/system.d
-
   install -Dm644 ../deepin-anything-server.sysusers "$pkgdir/usr/lib/sysusers.d/deepin-anything-server.conf"
 }
