--- a/deepincn/git/deepin-gettext-tools/PKGBUILD
+++ b/deepincn/git/deepin-gettext-tools/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
-
 pkgname=deepin-gettext-tools-git
 pkgver=1.0.8.r5.gc913e2d
 pkgrel=1
@@ -12,33 +11,28 @@ makedepends=('git')
 conflicts=('deepin-gettext-tools')
 provides=('deepin-gettext-tools')
 groups=('deepin-git')
-source=("$pkgname::git+https://github.com/linuxdeepin/deepin-gettext-tools/")
+source=("$pkgname-$pkgver::source.tar.gz")
 sha512sums=('SKIP')
-
 pkgver() {
-    cd $pkgname
+    cd $pkgname-$pkgver
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-  cd $pkgname
-
-  if [[ ! -z ${sha} ]];then
-    git checkout -b $sha
-  fi
+  cd $pkgname-$pkgver
 
   sed -e 's/sudo cp/cp/' -i src/generate_mo.py
   sed -e 's/qmake/qmake-qt5/' -e '/lupdate/d' -i Makefile
 }
 
 check() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   perl src/desktop_ts_convert.pl --help
   python src/generate_mo.py --help
   python src/update_pot.py --help
 }
 
 package() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   make DESTDIR="$pkgdir" install
 }
