--- a/deepincn/git/dde-api/PKGBUILD
+++ b/deepincn/git/dde-api/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
-
 pkgname=deepin-api-git
 pkgver=5.5.12.r8.ga0dc403
 pkgrel=1
@@ -21,25 +20,19 @@ provides=('deepin-api')
 conflicts=('deepin-api')
 groups=('deepin-git')
 install=deepin-api.install
-source=("$pkgname::git+https://github.com/linuxdeepin/dde-api/"
+source=("$pkgname-$pkgver::source.tar.gz"
         deepin-api.sysusers)
 sha512sums=('SKIP'
             'e894eb3928af9e244fa78010fdf16c8abb6ce18df114cf05327d02b18774d6ba5b023e4dfa0d07042f4e44a5c6e2ddb55b07f3e0db466a0e6169b52465fdefd6')
-
 pkgver() {
-    cd $pkgname
+    cd $pkgname-$pkgver
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-  cd $pkgname
-  if [[ ! -z ${sha} ]];then
-    git checkout -b $sha 
-  fi
-
+  cd $pkgname-$pkgver
   export GOPATH="$PWD/gobuild:/usr/share/gocode"
   export GO111MODULE=off
-
   # golang-deepin-lib's dependency, remove when go packaging resumes
   go get -v github.com/cryptix/wav
   go get -v github.com/youpy/go-wav
@@ -58,13 +51,12 @@ prepare() {
 
 build(){
   export GOFLAGS="-buildmode=pie -trimpath -mod=readonly -modcacherw"
-  cd $pkgname
+  cd $pkgname-$pkgver
   make -j1
 }
 
 package() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   make DESTDIR="$pkgdir" SYSTEMD_LIB_DIR=/usr/lib install
-
   install -Dm644 ../deepin-api.sysusers "$pkgdir"/usr/lib/sysusers.d/deepin-api.conf
 }
