--- a/deepincn/git/dde-daemon/PKGBUILD
+++ b/deepincn/git/dde-daemon/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
-
 pkgname=deepin-daemon-git
 pkgver=6.0.0.r85.gf8733f93
 pkgrel=1
@@ -23,7 +22,7 @@ conflicts=('deepin-daemon')
 provides=('deepin-daemon')
 groups=('deepin-git')
 install="$pkgname.install"
-source=("$pkgname::git+https://github.com/linuxdeepin/dde-daemon"
+source=("$pkgname-$pkgver::source.tar.gz"
         dde-daemon.patch
         remove-tc.patch
         'deepin-daemon.sysusers')
@@ -31,28 +30,21 @@ sha512sums=('SKIP'
             'SKIP'
             'SKIP'
             '808c02d4fec4cbbb01119bbb10499090199e738b7dd72c28a57dde098eef6132723f3434c151f79e21d9f788c7f7bae8046573ac93ba917afe0e803fbffa6d5a')
-
 pkgver() {
-    cd $pkgname
+    cd $pkgname-$pkgver
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-  cd $pkgname
-  if [[ ! -z ${sha} ]];then
-    git checkout -b $sha
-  fi
-
+  cd $pkgname-$pkgver
   patch -p1 -i ../remove-tc.patch
   patch -p1 -i ../dde-daemon.patch
   rm -rf system/uadp
   rm -rf session/uadpagent
-
   export GOPATH="$srcdir/build:/usr/share/gocode"
   export GO111MODULE=off
   # golang-deepin-lib's dependency, remove when go packaging resumes
   go get -v github.com/cryptix/wav
-
   go get -v github.com/axgle/mahonia github.com/msteinert/pam github.com/gosexy/gettext github.com/rickb777/date \
          github.com/jinzhu/gorm github.com/kelvins/sunrisesunset github.com/mozillazg/go-pinyin github.com/teambition/rrule-go \
          golang.org/x/xerrors github.com/mattn/go-sqlite3 github.com/fsnotify/fsnotify
@@ -66,24 +58,27 @@ prepare() {
 }
 
 build() {
-  export CGO_CPPFLAGS="${CPPFLAGS}"
-  export CGO_CFLAGS="${CFLAGS}"
-  export CGO_CXXFLAGS="${CXXFLAGS}"
-  export CGO_LDFLAGS="${LDFLAGS}"
+  export CGO_CPPFLAGS="${CPPFLAGS}
+"
+  export CGO_CFLAGS="${CFLAGS}
+"
+  export CGO_CXXFLAGS="${CXXFLAGS}
+"
+  export CGO_LDFLAGS="${LDFLAGS}
+"
   export GOFLAGS="-buildmode=pie -trimpath -mod=readonly -modcacherw"
-
-  cd $pkgname
+  cd $pkgname-$pkgver
 #  make -C network/nm_generator gen-nm-code
   make
 }
 
 package() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   make DESTDIR="$pkgdir" PAM_MODULE_DIR=usr/lib/security install
-
-  mv "$pkgdir"{,/usr}/lib/systemd
-  mv "$pkgdir"{,/usr}/lib/udev
+  mv "$pkgdir"{,/usr}
+/lib/systemd
+  mv "$pkgdir"{,/usr}
+/lib/udev
   rmdir "$pkgdir"/lib
-
   install -Dm644 ../deepin-daemon.sysusers "$pkgdir/usr/lib/sysusers.d/deepin-daemon.conf"
 }
