--- a/deepincn/git/dde-dock/PKGBUILD
+++ b/deepincn/git/dde-dock/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
-
 pkgname=deepin-dock-git
 pkgver=5.5.9.r54.g49d37a6c0
 pkgrel=1
@@ -13,28 +12,24 @@ makedepends=('git' 'cmake' 'ninja' 'qt5-tools' 'gtest' 'gmock' 'dtkcommon-git' '
 conflicts=('deepin-dock')
 provides=('deepin-dock')
 groups=('deepin-git')
-source=("$pkgname::git+https://github.com/linuxdeepin/dde-dock")
+source=("$pkgname-$pkgver::source.tar.gz")
 sha512sums=('SKIP')
-
 pkgver() {
-    cd $pkgname
+    cd $pkgname-$pkgver
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-    cd $pkgname
-    if [[ ! -z ${sha} ]];then
-      git checkout -b $sha
-    fi
+    cd $pkgname-$pkgver
 }
 
 build() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   cmake . -GNinja -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_INSTALL_LIBDIR=lib -DDOCK_TRAY_USE_NATIVE_POPUP=YES
   ninja
 }
 
 package() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   DESTDIR="$pkgdir" ninja install
 }
