--- a/deepincn/git/dde-file-manager/PKGBUILD
+++ b/deepincn/git/dde-file-manager/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
-
 pkgname=deepin-file-manager-git
 pkgver=5.5.1.r178.g9977208b0
 pkgrel=1
@@ -19,19 +18,15 @@ optdepends=('deepin-manual: for help menual'
 groups=('deepin-git')
 provides=('deepin-file-manager')
 conflicts=('deepin-file-manager')
-source=("$pkgname::git+https://github.com/linuxdeepin/dde-file-manager")
+source=("$pkgname-$pkgver::source.tar.gz")
 sha512sums=('SKIP')
-
 pkgver() {
-    cd $pkgname
+    cd $pkgname-$pkgver
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-    cd $pkgname
-    if [[ ! -z ${sha} ]];then
-      git checkout -b $sha
-    fi
+    cd $pkgname-$pkgver
   sed -e 's|systembusconf.path = /etc/dbus-1/system.d|systembusconf.path = /usr/share/dbus-1/system.d|' \
       -e 's|systemd_service.path = /lib/systemd/system|systemd_service.path = /usr/lib/systemd/system|' \
       -i src/dde-file-manager-daemon/dde-file-manager-daemon.pro
@@ -39,11 +34,13 @@ prepare() {
 
 build() {
   cd ${pkgname}
+
   qmake-qt5 PREFIX=/usr filemanager.pro
   make
 }
 
 package() {
   cd ${pkgname}
+
   make INSTALL_ROOT="$pkgdir" install
 }
