--- a/deepincn/git/dde-launcher/PKGBUILD
+++ b/deepincn/git/dde-launcher/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
-
 pkgname=deepin-launcher-git
 pkgver=5.4.11.r30.g6570c818
 pkgrel=1
@@ -12,28 +11,24 @@ makedepends=('git' 'cmake' 'ninja' 'gtest' 'qt5-tools' 'qt5-base' 'qt5-x11extras
 conflicts=('deepin-launcher')
 provides=('deepin-launcher')
 groups=('deepin-git')
-source=("$pkgname::git+https://github.com/linuxdeepin/dde-launcher.git")
+source=("$pkgname-$pkgver::source.tar.gz")
 sha512sums=('SKIP')
-
 pkgver() {
-    cd $pkgname
+    cd $pkgname-$pkgver
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-    cd $pkgname
-    if [[ ! -z ${sha} ]];then
-      git checkout -b $sha
-    fi
+    cd $pkgname-$pkgver
 }
 
 build() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   cmake . -GNinja -DCMAKE_INSTALL_PREFIX=/usr -DWITHOUT_UNINSTALL_APP=
   ninja
 }
 
 package() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   DESTDIR="$pkgdir" ninja install
 }
