--- a/deepincn/git/dde-network-utils/PKGBUILD
+++ b/deepincn/git/dde-network-utils/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
-
 pkgname=deepin-network-utils-git
 pkgver=5.4.9.r11.gbe2e215
 pkgrel=1
@@ -12,28 +11,24 @@ makedepends=('git' 'qt5-tools' 'gsettings-qt' 'gtest')
 conflicts=('deepin-network-utils')
 provides=('deepin-network-utils')
 groups=('deepin-git')
-source=("$pkgname::git+https://github.com/linuxdeepin/dde-network-utils.git")
+source=("$pkgname-$pkgver::source.tar.gz")
 sha512sums=('SKIP')
-
 pkgver() {
-    cd $pkgname
+    cd $pkgname-$pkgver
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-    cd $pkgname
-    if [[ ! -z ${sha} ]];then
-      git checkout -b $sha
-    fi
+    cd $pkgname-$pkgver
 }
 
 build(){
-  cd $pkgname
+  cd $pkgname-$pkgver
   qmake-qt5 PREFIX=/usr
   make
 }
 
 package() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   make INSTALL_ROOT="$pkgdir" install
 }
