--- a/deepincn/git/dde-polkit-agent/PKGBUILD
+++ b/deepincn/git/dde-polkit-agent/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
-
 pkgname=deepin-polkit-agent-git
 pkgver=5.5.19.r1.gc3af637
 pkgrel=1
@@ -12,32 +11,28 @@ makedepends=('git' 'polkit-qt5' 'dtkcommon-git' 'dtkwidget-git' 'cmake' 'ninja')
 conflicts=('deepin-polkit-agent')
 provides=('deepin-polkit-agent')
 groups=('deepin-git')
-source=("$pkgname::git+https://github.com/linuxdeepin/dde-polkit-agent"
+source=("$pkgname-$pkgver::source.tar.gz"
         "fix.patch")
 sha512sums=('SKIP'
             'b02235cece90a01942cd0898cfb85c7eb8fa6f980c4e1d83cfa115baba1599ca878788b5d89338444afe8267c30b11f9279ebda98d3bbc3dd4f3fe03cd1f0572')
-
 pkgver() {
-    cd $pkgname
+    cd $pkgname-$pkgver
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-  cd $pkgname
-  if [[ ! -z ${sha} ]];then
-    git checkout -b $sha
-  fi
+  cd $pkgname-$pkgver
 
   patch -p1 -i ../fix.patch
 }
 
 build() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   cmake . -G Ninja -DCMAKE_INSTALL_PREFIX=/usr
   ninja
 }
 
 package() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   DESTDIR="$pkgdir" ninja install
 }
