--- a/deepincn/git/dde-qt-dbus-factory/PKGBUILD
+++ b/deepincn/git/dde-qt-dbus-factory/PKGBUILD
@@ -1,6 +1,5 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
 # Contributor: DingYuan Zhang <justforlxz@gmail.com>
-
 pkgname=deepin-qt-dbus-factory-git
 pkgver=5.5.22.r4.g1092bfe
 pkgrel=1
@@ -13,28 +12,24 @@ makedepends=('git' 'dtkcore-git' 'python')
 conflicts=('deepin-qt-dbus-factory')
 provides=('deepin-qt-dbus-factory')
 groups=('deepin-git')
-source=("$pkgname::git+https://github.com/linuxdeepin/dde-qt-dbus-factory.git")
+source=("$pkgname-$pkgver::source.tar.gz")
 sha512sums=('SKIP')
-
 pkgver() {
-    cd $pkgname
+    cd $pkgname-$pkgver
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-    cd $pkgname
-    if [[ ! -z ${sha} ]];then
-      git checkout -b $sha
-    fi
+    cd $pkgname-$pkgver
 }
 
 build() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   qmake-qt5 PREFIX=/usr
   make
 }
 
 package() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   make INSTALL_ROOT="$pkgdir" install
 }
