--- a/deepincn/git/dde-session-shell/PKGBUILD
+++ b/deepincn/git/dde-session-shell/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
-
 pkgname=deepin-session-shell-git
 pkgver=5.5.9.r123.gd52f772
 pkgrel=1
@@ -12,32 +11,27 @@ makedepends=('git' 'cmake' 'ninja' 'qt5-tools' 'gtest' 'gmock')
 conflicts=('deepin-session-ui<5' 'deepin-session-shell')
 provides=('lightdm-deepin-greeter' 'deepin-session-shell')
 groups=('deepin-git')
-source=("$pkgname::git+https://github.com/linuxdeepin/dde-session-shell")
+source=("$pkgname-$pkgver::source.tar.gz")
 sha512sums=('SKIP')
-
 pkgver() {
-    cd $pkgname
+    cd $pkgname-$pkgver
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-  cd $pkgname
-  if [[ ! -z ${sha} ]];then
-    git checkout -b $sha
-  fi
+  cd $pkgname-$pkgver
 
   sed -i 's/5\.5//g' CMakeLists.txt tests/lightdm-deepin-greeter/CMakeLists.txt tests/dde-lock/CMakeLists.txt
 }
 
 build() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   cmake . -GNinja -DCMAKE_INSTALL_PREFIX=/usr
   ninja
 }
 
 package() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   DESTDIR="$pkgdir" ninja install
-
   chmod +x "$pkgdir"/usr/bin/deepin-greeter
 }
