--- a/deepincn/git/dde-session-ui/PKGBUILD
+++ b/deepincn/git/dde-session-ui/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
-
 pkgname=deepin-session-ui-git
 pkgver=5.5.6.r19.g9cf5bae1
 pkgrel=1
@@ -13,33 +12,29 @@ makedepends=('git' 'deepin-gettext-tools-git' 'cmake' 'ninja' 'deepin-dock-git' 
 provides=('deepin-notifications' 'deepin-session-ui')
 conflicts=('dde-workspace' 'deepin-session-ui' 'deepin-notifications')
 groups=('deepin-git')
-source=("$pkgname::git+https://github.com/linuxdeepin/dde-session-ui"
+source=("$pkgname-$pkgver::source.tar.gz"
   fix-cmakelist.patch)
 sha512sums=('SKIP'
             '50d74d551c71a0039b6064d54939fb8a611941d8e8c653c96a5fc146f3dc168b396d0a4a21c269abb9331fbc7a7cc33909069ea4f8cb20db752705369f1d3710')
-
 pkgver() {
-    cd $pkgname
+    cd $pkgname-$pkgver
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-  cd $pkgname
-  if [[ ! -z ${sha} ]];then
-    git checkout -b $sha
-  fi
+  cd $pkgname-$pkgver
 
   sed -i 's|/usr/share/backgrounds/default_background.jpg|/usr/share/backgrounds/deepin/desktop.jpg|' widgets/*.cpp
   patch -p1 -i ../fix-cmakelist.patch
 }
 
 build() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   cmake . -GNinja -DCMAKE_INSTALL_PREFIX=/usr
   ninja
 }
 
 package() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   DESTDIR="$pkgdir" ninja install
 }
