--- a/deepincn/git/deepin-desktop-base/PKGBUILD
+++ b/deepincn/git/deepin-desktop-base/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
-
 pkgname=deepin-desktop-base-git
 pkgver=2021.1.25.r0.g2388ac2
 pkgrel=1
@@ -12,43 +11,34 @@ conflicts=('deepin-desktop-base')
 provides=('deepin-desktop-base')
 groups=('deepin-git')
 makedepends=('git')
-source=("$pkgname::git+https://github.com/linuxdeepin/deepin-desktop-base"
+source=("$pkgname-$pkgver::source.tar.gz"
         distribution.info)
 sha512sums=('SKIP'
             '27625e6d0786b8adacdb7c52806d4faa28d2ab6b319a593b3ea9bcb69f0cc18ea19b258d629e3a0069ef9a69503589b0285289caef39a1e85bbd99e915c7cd7d')
-
 pkgver() {
-    cd $pkgname
+    cd $pkgname-$pkgver
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-    cd $pkgname
-    if [[ ! -z ${sha} ]];then
-      git checkout -b $sha
-    fi
+    cd $pkgname-$pkgver
 }
 
 build() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   make
 }
 
 package() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   make DESTDIR="$pkgdir" install
-
   install -Dm644 "$srcdir"/distribution.info -t "$pkgdir"/usr/share/deepin/
-
   # Remove Deepin distro's lsb-release
   rm "$pkgdir"/etc/lsb-release
-
   # Don't override systemd timeouts
   rm -r "$pkgdir"/etc/systemd
-
   # Make a symlink for deepin-version
   ln -s ../usr/lib/deepin/desktop-version "$pkgdir"/etc/deepin-version
-
   # Remove apt-specific templates
   rm -r "$pkgdir"/usr/share/python-apt
 }
