--- a/deepincn/git/deepin-icon-theme/PKGBUILD
+++ b/deepincn/git/deepin-icon-theme/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
-
 pkgname=deepin-icon-theme-git
 pkgver=2021.11.24.r0.g572b049d
 pkgrel=1
@@ -12,29 +11,24 @@ optdepends=('gtk-engine-murrine: for gtk2 themes')
 provides=('deepin-icon-theme')
 conflicts=('deepin-icon-theme')
 groups=('deepin-git')
-source=("$pkgname::git+https://github.com/linuxdeepin/deepin-icon-theme/")
+source=("$pkgname-$pkgver::source.tar.gz")
 sha512sums=('SKIP')
-
 pkgver() {
-    cd $pkgname
+    cd $pkgname-$pkgver
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-    cd $pkgname
-    if [[ ! -z ${sha} ]];then
-      git checkout -b $sha
-    fi
+    cd $pkgname-$pkgver
 }
 
 build() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   make hicolor-links
 }
 
 package() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   make DESTDIR="$pkgdir" install
-
   cp -a ./Sea ./usr/share/icons/hicolor "$pkgdir"/usr/share/icons/
 }
