--- a/deepincn/git/deepin-movie/PKGBUILD
+++ b/deepincn/git/deepin-movie/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
-
 pkgname=deepin-movie-git
 epoch=1
 pkgver=5.9.8.r48.g225c49e9
@@ -14,31 +13,30 @@ provides=('deepin-movie')
 conflicts=('deepin-movie')
 groups=('deepin-extra-git')
 options=('!lto')
-source=("$pkgname::git+https://github.com/linuxdeepin/deepin-movie-reborn.git"
+source=("$pkgname-$pkgver::source.tar.gz"
         fix-build.patch)
 sha512sums=('SKIP'
             'SKIP')
-
 pkgver() {
-    cd $pkgname
+    cd $pkgname-$pkgver
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   patch -p1 -i ../fix-build.patch
   # https://github.com/linuxdeepin/deepin-movie-reborn/issues/76
   sed -i '/setCanShowInUI/d' src/vendor/presenter.cpp
 }
 
 build() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   export CXXFLAGS+=' -fpermissive'
   cmake -GNinja -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_INSTALL_LIBDIR=lib -DCMAKE_BUILD_TYPE=Release .
   ninja
 }
 
 package() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   DESTDIR="$pkgdir" ninja install
 }
