--- a/deepincn/git/deepin-sound-theme/PKGBUILD
+++ b/deepincn/git/deepin-sound-theme/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
-
 pkgname=deepin-sound-theme-git
 pkgver=15.10.6.r3.g0c81150
 pkgrel=1
@@ -10,27 +9,23 @@ makedepends=('git')
 license=('GPL3')
 groups=('deepin-git')
 conflicts=('deepin-artwork' 'deepin-sound-theme')
-source=("$pkgname::git+https://github.com/linuxdeepin/deepin-sound-theme/")
+source=("$pkgname-$pkgver::source.tar.gz")
 sha512sums=('SKIP')
-
 pkgver() {
-    cd $pkgname
+    cd $pkgname-$pkgver
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-    cd $pkgname
-    if [[ ! -z ${sha} ]];then
-      git checkout -b $sha
-    fi
+    cd $pkgname-$pkgver
 }
 
 build() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   make
 }
 
 package() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   make PREFIX=/usr DESTDIR="$pkgdir" install
 }
