--- a/deepincn/git/deepin-turbo/PKGBUILD
+++ b/deepincn/git/deepin-turbo/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: DingYuan Zhang <justforlxz@gmail.com>
-
 pkgname=deepin-turbo-git
 pkgver=0.0.5.r13.g8c85d2c
 pkgrel=1
@@ -12,28 +11,24 @@ makedepends=('cmake' 'git')
 groups=('deepin')
 provides=('deepin-turbo')
 conflicts=('deepin-turbo')
-source=("$pkgname::git+https://github.com/linuxdeepin/deepin-turbo")
+source=("$pkgname-$pkgver::source.tar.gz")
 sha512sums=('SKIP')
-
 pkgver() {
     cd $pkgbase
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-    cd $pkgname
-    if [[ ! -z ${sha} ]];then
-      git checkout -b $sha
-    fi
+    cd $pkgname-$pkgver
 }
 
 build() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   cmake -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_INSTALL_LIBDIR=lib -DCMAKE_BUILD_TYPE=Release .
   make
 }
 
 package() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   make DESTDIR="$pkgdir" install
 }
