--- a/deepincn/git/deepin-wallpapers/PKGBUILD
+++ b/deepincn/git/deepin-wallpapers/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
-
 pkgbase=deepin-wallpapers-git
 pkgname=(deepin-wallpapers-git deepin-community-wallpapers-git)
 pkgver=1.6.14.1.r4.g9d8abcc
@@ -11,21 +10,18 @@ license=('GPL')
 url="https://github.com/linuxdeepin/deepin-wallpapers"
 makedepends=('git' 'deepin-api-git')
 groups=('deepin-git')
-source=("$pkgname::git+https://github.com/linuxdeepin/deepin-wallpapers/")
+source=("$pkgname-$pkgver::source.tar.gz")
 sha512sums=('SKIP')
-
 pkgver() {
     cd $pkgbase
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-  cd $pkgname
-  if [[ ! -z ${sha} ]];then
-    git checkout -b $sha
-  fi
+  cd $pkgname-$pkgver
 
   cp -a "$srcdir"/$pkgbase{,-community}
+
 }
 
 build() {
@@ -33,7 +29,6 @@ build() {
   for _pic in deepin/*; do
     make PICS=$_pic
   done
-
   cd "$srcdir"/$pkgbase-community
   for _pic in deepin-community/*; do
     make PICS=$_pic
@@ -45,14 +40,11 @@ package_deepin-wallpapers-git() {
   groups=('deepin-git')
   provides=('deepin-wallpapers' 'deepin-community-wallpapers-git')
   conflicts=('deepin-wallpapers' 'deepin-community-wallpapers-git')
-
   cd $pkgbase
   install -dm755 "$pkgdir"/usr/share/wallpapers
   cp -r deepin "$pkgdir"/usr/share/wallpapers/
-
   install -dm755 "$pkgdir"/var/cache
   cp -r image-blur "$pkgdir"/var/cache/
-
   # Suggested by upstream
   install -dm755 "$pkgdir"/usr/share/backgrounds/deepin
   ln -s ../../wallpapers/deepin/Hummingbird_by_Shu_Le.jpg "$pkgdir"/usr/share/backgrounds/deepin/desktop.jpg
@@ -65,11 +57,9 @@ package_deepin-community-wallpapers-git() {
   groups=('deepin-git')
   provides=('deepin-wallpapers-git' 'deepin-wallpapers')
   conflicts=('deepin-wallpapers-git' 'deepin-wallpapers')
-
   cd $pkgbase-community
   install -dm755 "$pkgdir"/usr/share/wallpapers/deepin
   cp deepin-community/* "$pkgdir"/usr/share/wallpapers/deepin/
-
   install -dm755 "$pkgdir"/var/cache
   cp -r image-blur "$pkgdir"/var/cache/
 }
