--- a/deepincn/git/disomaster/PKGBUILD
+++ b/deepincn/git/disomaster/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
-
 pkgname=disomaster-git
 pkgver=5.0.7.r2.g157dd8f
 pkgrel=1
@@ -12,28 +11,26 @@ makedepends=('git' 'qt5-tools')
 groups=('deepin-git')
 provides=('disomaster')
 conflicts=('disomaster')
-source=("$pkgname::git+https://github.com/linuxdeepin/disomaster")
+source=("$pkgname-$pkgver::source.tar.gz")
 sha512sums=('SKIP')
-
 pkgver() {
-    cd $pkgname
+    cd $pkgname-$pkgver
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-    cd $pkgname
-    if [[ ! -z ${sha} ]];then
-      git checkout -b $sha
-    fi
+    cd $pkgname-$pkgver
 }
 
 build() {
   cd ${pkgname}
+
   qmake-qt5 PREFIX=/usr
   make
 }
 
 package() {
   cd ${pkgname}
+
   make INSTALL_ROOT="$pkgdir" install
 }
