--- a/deepincn/git/dtkwidget/PKGBUILD
+++ b/deepincn/git/dtkwidget/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
-
 pkgname=dtkwidget-git
 pkgver=5.5.45.r1.gbc050fca
 pkgrel=1
@@ -13,28 +12,24 @@ makedepends=('git' 'qt5-tools' 'gtest' 'dtkcommon-git' 'dtkcore-git' 'dtkgui-git
 provides=('dtkwidget')
 conflicts=('dtkwidget')
 groups=('deepin-git')
-source=("$pkgname::git+https://github.com/linuxdeepin/dtkwidget.git")
+source=("$pkgname-$pkgver::source.tar.gz")
 sha512sums=('SKIP')
-
 pkgver() {
-    cd $pkgname
+    cd $pkgname-$pkgver
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-    cd $pkgname
-    if [[ ! -z ${sha} ]];then
-      git checkout -b $sha
-    fi
+    cd $pkgname-$pkgver
 }
 
 build() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   qmake-qt5 PREFIX=/usr
   make
 }
 
 package() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   make INSTALL_ROOT="$pkgdir" install
 }
