--- a/deepincn/git/go-dbus-factory/PKGBUILD
+++ b/deepincn/git/go-dbus-factory/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: DingYuan <justforlxz@gmail.com>
-
 pkgname=golang-github-linuxdeepin-go-dbus-factory-git
 pkgver=2.0.0.r4.gfab97cf
 pkgrel=1
@@ -12,19 +11,15 @@ makedepends=('git' 'go')
 provides=('golang-github-linuxdeepin-go-dbus-factory')
 conflicts=('golang-github-linuxdeepin-go-dbus-factory')
 groups=('deepin-git')
-source=("$pkgname::git+https://github.com/linuxdeepin/go-dbus-factory")
+source=("$pkgname-$pkgver::source.tar.gz")
 sha512sums=('SKIP')
-
 pkgver() {
-    cd $pkgname
+    cd $pkgname-$pkgver
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-  cd $pkgname
-  if [[ ! -z ${sha} ]];then
-    git checkout -b $sha
-  fi
+  cd $pkgname-$pkgver
 
   export GOPATH="$srcdir/build:/usr/share/gocode"
   export GO111MODULE=off
@@ -38,15 +33,17 @@ prepare() {
 }
 
 build() {
-  export CGO_CPPFLAGS="${CPPFLAGS}"
-  export CGO_CFLAGS="${CFLAGS}"
-  export CGO_CXXFLAGS="${CXXFLAGS}"
-  export CGO_LDFLAGS="${LDFLAGS}"
+  export CGO_CPPFLAGS="${CPPFLAGS}
+"
+  export CGO_CFLAGS="${CFLAGS}
+"
+  export CGO_CXXFLAGS="${CXXFLAGS}
+"
+  export CGO_LDFLAGS="${LDFLAGS}
+"
   export GOFLAGS="-buildmode=pie -trimpath -mod=readonly -modcacherw"
-
   cd "$srcdir"/build/src/github.com/linuxdeepin/go-dbus-factory
   make bin
-
   # Suggested by upstream: don't run
   # ./gen.sh
 }
