--- a/deepincn/git/go-gir-generator/PKGBUILD
+++ b/deepincn/git/go-gir-generator/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
-
 pkgname=golang-deepin-gir-git
 pkgver=3.0.0.r0.gde36694
 pkgrel=1
@@ -13,22 +12,17 @@ checkdepends=('golang-gopkg-check.v1')
 provides=('golang-deepin-gir')
 conflicts=('golang-deepin-gir')
 groups=('deepin-git')
-source=("$pkgname::git+https://github.com/linuxdeepin/go-gir-generator")
+source=("$pkgname-$pkgver::source.tar.gz")
 sha512sums=('SKIP')
-
 pkgver() {
-    cd $pkgname
+    cd $pkgname-$pkgver
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-  cd $pkgname
-  if [[ ! -z ${sha} ]];then
-    git checkout -b $sha
-  fi
+  cd $pkgname-$pkgver
 
   mkdir -p "$srcdir"/build/src/github.com/linuxdeepin/
-
   # Should be fixed upstream
   mkdir -p out/src/github.com/linuxdeepin/go-gir/{glib-2.0,gobject-2.0,gio-2.0,gudev-1.0}
 
@@ -40,10 +34,9 @@ build() {
   export GOPATH="$srcdir/build:/usr/share/gocode"
   export GOFLAGS="-buildmode=pie -trimpath -mod=readonly -modcacherw"
   export GO111MODULE=off
-  cd $pkgname
+  cd $pkgname-$pkgver
   rm -r gogtk-demo
   make
-
   mv out/src/github.com/linuxdeepin/go-gir "$srcdir"/build/src/github.com/linuxdeepin/
 }
 
@@ -52,7 +45,6 @@ check() {
   export GOPATH="$srcdir/build:/usr/share/gocode"
   cd "$srcdir"/build/src/github.com/linuxdeepin/go-gir
   go test -v $(go list ./...)
-
   cd "$srcdir/$pkgname"
   go run test/memory.go
 }
