--- a/deepincn/git/startdde/PKGBUILD
+++ b/deepincn/git/startdde/PKGBUILD
@@ -1,5 +1,4 @@
 # Maintainer: justforlxz <justforlxz@gmail.com>
-
 pkgname=startdde-git
 pkgver=5.9.15.1.r24.g9684bb4
 pkgrel=1
@@ -17,19 +16,15 @@ optdepends=('deepin-wm: Legacy 3D window manager'
 provides=('startdde')
 conflicts=('startdde')
 groups=('deepin-git')
-source=("$pkgname::git+https://github.com/linuxdeepin/startdde")
+source=("$pkgname-$pkgver::source.tar.gz")
 sha512sums=('SKIP')
-
 pkgver() {
-    cd $pkgname
+    cd $pkgname-$pkgver
     git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-  cd $pkgname
-  if [[ ! -z ${sha} ]];then
-    git checkout -b $sha
-  fi
+  cd $pkgname-$pkgver
   export GOPATH="$srcdir/build:/usr/share/gocode"
   export GO111MODULE=off
   go get -v github.com/cryptix/wav
@@ -45,17 +40,15 @@ prepare() {
 
 build() {
   export GOFLAGS="-mod=readonly -modcacherw"
-  cd $pkgname
+  cd $pkgname-$pkgver
   make
 }
 
 package() {
-  cd $pkgname
+  cd $pkgname-$pkgver
   make DESTDIR="$pkgdir" install
-
   # Fix env file permission
   chmod +x "$pkgdir"/etc/X11/Xsession.d/*
-
   # Don't rely on deepin-session's location
   install -dm755 "$pkgdir"/etc/X11/xinit/xinitrc.d
   mv "$pkgdir"/etc/X11/Xsession.d/* "$pkgdir"/etc/X11/xinit/xinitrc.d/
